Complete Search Agent
Go to build UI

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 BASE_MODEL=gemini-2.0-flash
-BASE_API={your_api_key}
+BASE_API=
 BASE_URL=https://generativelanguage.googleapis.com/v1beta/openai/
+MAX_CONTEXT_SIZE = 32000
+RATE_LIMIT = 1
+TIME_OUT = 10
+MAX_RETRIES = 3
+RETRY_DELAY = 1
