--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,19 @@ beautifulsoup4==4.13.3
 bs4==0.0.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
 distro==1.9.0
 dotenv==0.9.9
+duckduckgo_search==2025.4.4
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 jiter==0.9.0
+lxml==5.3.2
 openai==1.70.0
+primp==0.14.0
 pydantic==2.11.2
 pydantic_core==2.33.1
 python-dotenv==1.1.0
