--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
+aiosqlite==0.21.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -67,6 +68,8 @@ langchain-google-genai==2.1.2
 langchain-text-splitters==0.3.8
 langgraph==0.3.25
 langgraph-checkpoint==2.0.24
+langgraph-checkpoint-postgres==2.0.19
+langgraph-checkpoint-sqlite==2.0.6
 langgraph-prebuilt==0.1.8
 langgraph-sdk==0.1.61
 langsmith==0.3.24
@@ -95,6 +98,8 @@ propcache==0.3.1
 proto-plus==1.26.1
 protobuf==5.29.4
 psutil==7.0.0
+psycopg==3.2.6
+psycopg-pool==3.2.6
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -116,6 +121,7 @@ pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rpds-py==0.24.0
@@ -129,7 +135,9 @@ SQLAlchemy==2.0.40
 stack-data==0.6.3
 stealth-requests==1.2.1
 streamlit==1.44.1
+tavily-python==0.5.4
 tenacity==9.1.2
+tiktoken==0.9.0
 toml==0.10.2
 tornado==6.4.2
 tqdm==4.67.1
